fix: overflow mobile

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -323,7 +323,7 @@
 
   // Layout do conteúdo
   &__content {
-    @apply flex-grow pb-8;
+    @apply flex-grow pb-8 overflow-x-hidden;
   }
 
   &__container {
